[gd_scene load_steps=4 format=3 uid="uid://did32piw7g152"]

[ext_resource type="Texture2D" uid="uid://dj0f5o48agyvo" path="res://Assets/Sprites/Other/InventoryStot.png" id="1_2ldyv"]
[ext_resource type="Script" path="res://Scripts/other/InventoryGridSlot.gd" id="2_7ugjk"]
[ext_resource type="AudioStream" uid="uid://d75kq3glrqq3" path="res://Assets/Sound/SoundEffects/selectThing.wav" id="4_s8d7b"]

[node name="InventoryGridItem" type="TextureRect"]
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("1_2ldyv")
script = ExtResource("2_7ugjk")

[node name="Select" type="AudioStreamPlayer2D" parent="."]
position = Vector2(579, 335)
stream = ExtResource("4_s8d7b")
volume_db = 10.0
max_distance = 10000.0
bus = &"SFX"

[node name="MouseOver" type="AudioStreamPlayer2D" parent="."]
position = Vector2(579, 335)
stream = ExtResource("4_s8d7b")
max_distance = 10000.0
bus = &"SFX"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
